--- a/app_famortiza/src/app/presentacion/pages/home-presentacion/home-presentacion.component.html
+++ b/app_famortiza/src/app/presentacion/pages/home-presentacion/home-presentacion.component.html
@@ -1,1 +1,56 @@
-<p>home-presentacion works!</p>
+<div class="content">
+    <div class="bloque empresa">
+        <div class="texto">
+            <h1>DIMSISTEM</h1>
+            <h3>Soluciones de software a la medida</h3>
+            <p>Desarrollamos software a la medida de tus necesidades, entregando calidad, agilidad, seguridad y
+                facilidad en el manejo de nuestros productos</p>
+            <p>Disponemos de los siguientes servicios</p>
+            <ul>
+                <li>Paginas web</li>
+                <li>Desarrollo de aplicaciones Web, mobil y de escritorio, a la medida</li>
+                <li>Análisis de bases de datos (SQL)</li>
+                <li>Migraciones de software</li>
+                <li>Implementacion e Implantación de Software</li>
+            </ul>
+        </div>
+        <div class="imagen">
+            <img src="./assets/imagenes/presentacion/img_desarrollo.png" alt="" srcset="">
+        </div>
+    </div>
+    <div class="bloque aplicacion">
+        <div class="imagen">
+            <img src="./assets/imagenes/presentacion/sistema_amortizacion.jpg" alt="" srcset="">
+        </div>
+        <div class="texto">
+            <h1>Sistemas de Amortización</h1>
+            <h3>Generación de Tablas</h3>
+            <p>Genera las tablas de amortización en los distintos sistemas, introduciendo los datos según tu necesidad acorde al monto, plazo entre otros parametros disponibles</p>
+            <button routerLink="/sistema" >Click aqui!!</button>
+            <h3>Parametrización</h3>
+            <p>Deseas configurar los parametros de entrada para que los datos de tu Institución financiera aparezcan en la generación de las tablas de amortización?</p>
+            <button routerLink="/acceso">Click aqui!!</button>
+        </div>
+    </div>
+    <div class="bloque personal">
+        <div class="texto">
+            <h1>ING. Toapanta Llundo Diego Mauricio</h1>
+            <h3>Contador CPA & Desarrollador</h3>
+            <p>Contador Público Autorizado desde 2014 graduado en la Universidad Tecnica de Amabto "UTA" (Facultad: Contabilidad y Auditoria), y desarrollador de software desde el 2020 Estudiante UTA(Software)</p>
+            <span>Capacidades</span>
+            <ul>
+                <li>Asesor laboral</li>
+                <li>Asesor Tributario</li>
+                <li>Asesor Financiero</li>
+                <li>Implementador NIC. NIIF</li>
+                <li>Conocimientos en (C#, java, php, js, ts, sql, angular, laravel, etc...)</li>
+            </ul>
+           
+        </div>
+        <div class="imagen">
+            <img src="./assets/imagenes/presentacion/perfil.jpg" alt="" srcset="">
+            <button routerLink="/contacto">Contacto</button>
+        </div>
+        
+    </div>
+</div>
