--- a/app_famortiza/src/app/presentacion/componentes/menu-presentacion/menu-presentacion.component.html
+++ b/app_famortiza/src/app/presentacion/componentes/menu-presentacion/menu-presentacion.component.html
@@ -1,1 +1,8 @@
-<p>menu-presentacion works!</p>
+<div class="content">
+    <app-menu-item-presentacion 
+    class="item" 
+    *ngFor="let row of listaMenu" 
+    [item]="row"
+    [routerLink]="row.ruta">
+    </app-menu-item-presentacion>
+</div>
