--- a/app_famortiza/src/app/presentacion/principal-presentacion/principal-presentacion.component.html
+++ b/app_famortiza/src/app/presentacion/principal-presentacion/principal-presentacion.component.html
@@ -1,1 +1,11 @@
-<p>principal-presentacion works!</p>
+<div class="content">
+    <div class="fijo">
+        <app-cab-presentacion></app-cab-presentacion>
+    <app-menu-presentacion></app-menu-presentacion>
+    </div>
+    <div class="contenido">
+        <router-outlet></router-outlet>
+    </div>
+    
+    <app-pie-presentacion></app-pie-presentacion>
+</div>
