Interfaz crud roles

--- a/app_famortiza/src/app/admin/componentes/menu/item-menu-admin/item-menu-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/menu/item-menu-admin/item-menu-admin.component.html
@@ -1,1 +1,6 @@
-<p>item-menu-admin works!</p>
+<div class="content" [ngClass]="{'seleccionado':data.Seleccionado}" [routerLink]="data.route">
+    <i class="{{data.Logo}}" ></i>
+    <div class="texto" [ngClass]="{'contraer':contraer}">
+        <span>{{data.Nombre}}</span>
+    </div>
+</div>
