--- a/app_famortiza/src/app/admin/componentes/pagina/cab-admin/cab-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pagina/cab-admin/cab-admin.component.html
@@ -1,1 +1,13 @@
-<p>cab-admin works!</p>
+<div class="content">
+    <div routerLink="" class="logo">
+        <i class="fa-brands fa-twitter img"></i>
+        <span>CEMPLAY</span>
+    </div>
+    <div class="central">
+        
+    </div>
+    <div class="iconos">
+        <i class="fa-regular fa fa-bell icono"></i>
+        <i class="fa-regular fa-user icono"></i>
+    </div>
+</div>
