--- a/app_famortiza/src/app/admin/componentes/menu/cont-menu-admin/cont-menu-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/menu/cont-menu-admin/cont-menu-admin.component.html
@@ -1,1 +1,9 @@
-<p>cont-menu-admin works!</p>
+<div class="content">
+    <div class="icono-menu" (click)="contraer()">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    <div class="item" *ngFor="let a of listaMenu">
+        <app-item-menu-admin [data]="a" [contraer]="contraerSelected" (click)="seleccionar(a)"></app-item-menu-admin>
+    </div>
+
+</div>
