--- a/app_famortiza/src/app/admin/componentes/pages/roles/pag-roles-admin/pag-roles-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/roles/pag-roles-admin/pag-roles-admin.component.html
@@ -1,1 +1,8 @@
-<p>pag-roles-admin works!</p>
+<div class="content">
+  
+    <app-pag-compartido-cabecera [data]="data"></app-pag-compartido-cabecera>
+    <div class="tabla">
+        <app-tabla-roles-admin></app-tabla-roles-admin>
+    </div>
+    
+</div>
