--- a/app_famortiza/src/app/presentacion/pages/acceso-presentacion/acceso-presentacion.component.html
+++ b/app_famortiza/src/app/presentacion/pages/acceso-presentacion/acceso-presentacion.component.html
@@ -1,17 +1,13 @@
 <div class="content">
-    <form class="formulario" [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
-        <div class="campo">
-            <label for="nombre">
-                Nombre
-            </label>
-            <input id="nombre" type="text" formControlName="nombre">
-        </div>
-        <div class="campo">
-            <label for="direccion">
-                Contraseña
-            </label>
-            <input id="direccion" type="text" formControlName="direccion">
-        </div>
-        <button class="button" type="submit">Acceder admin</button>
-    </form>
+  <form class="formulario" [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+    <div class="campo">
+      <label for="email">Correo Electrónico</label>
+      <input id="email" type="text" formControlName="email">
+    </div>
+    <div class="campo">
+      <label for="password">Contraseña</label>
+      <input id="password" type="password" formControlName="password">
+    </div>
+    <button class="button" type="submit">Acceder admin</button>
+  </form>
 </div>
