--- a/app_famortiza/src/app/admin/componentes/pages/instituciones/pag-instituciones-admin/pag-instituciones-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/instituciones/pag-instituciones-admin/pag-instituciones-admin.component.html
@@ -1,1 +1,6 @@
-<p>pag-instituciones-admin works!</p>
+<div class="content">  
+    <app-pag-compartido-cabecera [data]="data"></app-pag-compartido-cabecera>
+    <div class="tabla">
+        <app-tabla-instituciones-admin></app-tabla-instituciones-admin>
+    </div>    
+</div>
