--- a/app_famortiza/src/app/admin/componentes/pages/instituciones/tabla-instituciones-admin/tabla-instituciones-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/instituciones/tabla-instituciones-admin/tabla-instituciones-admin.component.html
@@ -1,1 +1,76 @@
-<p>tabla-instituciones-admin works!</p>
+<div class="card">
+    <p-toast></p-toast>
+    <p-table #dt [value]="dataSet" [rows]="5" [paginator]="true" [globalFilterFields]="['Nombre', 'Descripcion']"
+        [rowHover]="true" dataKey="Id" [(selection)]="SelectedDataSet" [exportHeader]="'customExportHeader'"
+        [tableStyle]="{ 'min-width': '25rem' }"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [showCurrentPageReport]="true">
+        <ng-template pTemplate="caption">
+            <div class="flex">
+                <button title="Exportar a Excel" type="button" pButton pRipple icon="pi pi-file-excel"
+                    (click)="exportExcel()" class="p-button-success mr-2" pTooltip="XLS"
+                    tooltipPosition="bottom"></button>
+                <button title="Exportar a PDF" type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()"
+                    class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
+                <button class="btn-new-reg" (click)="openNew()">Nuevo Registro</button>
+            </div>
+            <div class="flex align-items-center justify-content-between">
+                <h5 class="m-0">Gestion de Registros</h5>
+                <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" #textoBuscar (input)="dt.filterGlobal(textoBuscar.value, 'contains')"
+                        placeholder="Buscar..." />
+                </span>
+            </div>
+        </ng-template>
+
+        <ng-template pTemplate="header">
+
+            <tr class="reg">
+                <th style="width: 1rem">Id</th>
+                <th style="width: 2rem">Nombre </th>
+                <th style="width: 10rem">Observación </th>
+                <th style="width: 2rem">Logo</th>
+                <th style="width: 15rem">Contactos</th>
+                <th style="width: 1rem">Habilitado</th>
+                <th style="width: 5rem">OPCIONES</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row>
+            <tr >
+                <td>{{ row.Id}}</td>
+                <td>{{ row.Nombre}}</td>
+                <td>{{ row.Observacion}}</td>
+                <td><img src="{{ row.RutaLogo}}" alt="" style="width: 75px; height: 75px;"></td>
+                <td><div class="tab-contact">
+                    <div class="tab-item"><i class="fa-solid fa-location-dot"></i>{{ row.Direccion}}</div>
+                    <div class="tab-item"><i class="fa-solid fa-globe"></i>{{ row.PaginaWeb}}</div>
+                    <div class="tab-item"><i class="fa-solid fa-envelope"></i>{{ row.Correo}}</div>
+                    <div class="tab-item"><i class="fa-solid fa-phone"></i>{{ row.Telefono}}</div>
+                    <div class="tab-item"><i class="fa-solid fa-mobile-screen"></i>{{ row.Celular}}</div> 
+                </div>
+                    
+                </td>
+                <td>{{ row.Habilitado}}</td>                
+                <td class="btns-options">
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
+                        (click)="editRow(row)"></button>
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+                        (click)="deleteRow(row)"></button>
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+<!-- En el template del padre   -->
+<ng-container *ngIf="mostrarForm">
+    <app-form-instituciones-admin 
+    [data]="data" 
+    [dataSet]="dataSet" 
+    [dataDialog]="dataDialog" 
+    (onClick)="hideDialog()" 
+    (previsualizacion)="data.RutaLogo"
+    ></app-form-instituciones-admin>
+  </ng-container>
+
+<p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
