--- a/app_famortiza/src/app/admin/componentes/pages/usuarios/pag-usuarios-admin/pag-usuarios-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/usuarios/pag-usuarios-admin/pag-usuarios-admin.component.html
@@ -1,1 +1,6 @@
-<p>pag-usuarios-admin works!</p>
+<div class="content">  
+    <app-pag-compartido-cabecera [data]="data"></app-pag-compartido-cabecera>
+    <div class="tabla">
+        <app-tabla-usuarios-admin></app-tabla-usuarios-admin>
+    </div>    
+</div>
