--- a/app_famortiza/src/app/admin/componentes/pages/segmentos/pag-segmentos-admin/pag-segmentos-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/segmentos/pag-segmentos-admin/pag-segmentos-admin.component.html
@@ -1,1 +1,6 @@
-<p>pag-segmentos-admin works!</p>
+<div class="content">  
+    <app-pag-compartido-cabecera [data]="data"></app-pag-compartido-cabecera>
+    <div class="tabla">
+        <app-tabla-segmentos-admin></app-tabla-segmentos-admin>
+    </div>    
+</div>
