--- a/app_famortiza/src/app/admin/componentes/pages/segmentos/tabla-segmentos-admin/tabla-segmentos-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/segmentos/tabla-segmentos-admin/tabla-segmentos-admin.component.html
@@ -1,1 +1,66 @@
-<p>tabla-segmentos-admin works!</p>
+<div class="card">
+    <p-toast></p-toast>
+    <p-table #dt [value]="dataSet" [rows]="5" [paginator]="true" [globalFilterFields]="['Nombre', 'Institucion','Descripcion']"
+        [rowHover]="true" dataKey="Id" [(selection)]="SelectedDataSet" [exportHeader]="'customExportHeader'"
+        [tableStyle]="{ 'min-width': '25rem' }"
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
+        [showCurrentPageReport]="true">
+        <ng-template pTemplate="caption">
+            <div class="flex">
+                <button title="Exportar a Excel" type="button" pButton pRipple icon="pi pi-file-excel"
+                    (click)="exportExcel()" class="p-button-success mr-2" pTooltip="XLS"
+                    tooltipPosition="bottom"></button>
+                <button title="Exportar a PDF" type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()"
+                    class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
+                <button class="btn-new-reg" (click)="openNew()">Nuevo Registro</button>
+            </div>
+            <div class="flex align-items-center justify-content-between">
+                <h5 class="m-0">Gestion de Registros</h5>
+                <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" #textoBuscar (input)="dt.filterGlobal(textoBuscar.value, 'contains')"
+                        placeholder="Buscar..." />
+                </span>
+            </div>
+        </ng-template>
+
+        <ng-template pTemplate="header">
+
+            <tr class="reg">
+                <th >Id</th>
+                <th >Institucion </th>
+                <th >Nombre </th>
+                <th >Descripcion </th>
+                <th >Imagen</th>
+                <th >OPCIONES</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row>
+            <tr >
+                <td>{{ row.Id}}</td>
+                <td>{{ row.Institucion}}</td>
+                <td>{{ row.Nombre}}</td>                
+                <td>{{ row.Descripcion}}</td> 
+                <td><img src="{{ row.RutaImagen}}" alt="" style="width: 75px; height: 75px;"></td>               
+                <td class="btns-options">
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
+                        (click)="editRow(row)"></button>
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+                        (click)="deleteRow(row)"></button>
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+<!-- En el template del padre   -->
+<ng-container *ngIf="mostrarForm">
+    <app-form-segmentos-admin 
+    [data]="data" 
+    [dataDropdown]="dataDropdown" 
+    [dataSet]="dataSet" 
+    [dataDialog]="dataDialog" 
+    (onClick)="hideDialog()" 
+    [selectedDropdown]="selectedDropdown"></app-form-segmentos-admin>
+  </ng-container>
+
+<p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
