Interfaz crud tasas de interes

--- a/app_famortiza/src/app/admin/componentes/pages/tasas/pag-tasas-admin/pag-tasas-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/tasas/pag-tasas-admin/pag-tasas-admin.component.html
@@ -1,1 +1,6 @@
-<p>pag-tasas-admin works!</p>
+<div class="content">  
+    <app-pag-compartido-cabecera [data]="data"></app-pag-compartido-cabecera>
+    <div class="tabla">
+        <app-tabla-tasas-admin></app-tabla-tasas-admin>
+    </div>    
+</div>
