--- a/app_famortiza/src/app/admin/componentes/pages/cargos/pag-cargos-admin/pag-cargos-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/cargos/pag-cargos-admin/pag-cargos-admin.component.html
@@ -1,1 +1,6 @@
-<p>pag-cargos-admin works!</p>
+<div class="content">  
+    <app-pag-compartido-cabecera [data]="data"></app-pag-compartido-cabecera>
+    <div class="tabla">
+        <app-tabla-cargos-admin></app-tabla-cargos-admin>
+    </div>    
+</div>
