--- a/app_famortiza/src/app/admin/componentes/pages/usuarios/tabla-usuarios-admin/tabla-usuarios-admin.component.html
+++ b/app_famortiza/src/app/admin/componentes/pages/usuarios/tabla-usuarios-admin/tabla-usuarios-admin.component.html
@@ -31,6 +31,8 @@
                 <th >Nombre </th>
                 <th >Correo </th>
                 <th >Contraseña</th>
+                <th>Institución</th>
+                <th>Rol</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-row>
@@ -38,7 +40,9 @@
                 <td>{{ row.Id}}</td>
                 <td>{{ row.name}}</td>
                 <td>{{ row.email}}</td>                
-                <td>{{ row.password}}</td>                
+                <td>{{ row.password}}</td> 
+                <td>{{ row.Institucion}}</td>
+                <td>{{ row.Rol}}</td>               
                 <td class="btns-options">
                     <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
                         (click)="editRow(row)"></button>
@@ -57,6 +61,10 @@
     [dataDialog]="dataDialog" 
     (onClick)="hideDialog()" 
     (previsualizacion)="data.RutaLogo"
+    [instituciones]="instituciones"
+    [roles]="roles"
+    [selectedInstitucion]="selectedInstitucion"
+    [selectedRol]="selectedRol"
     ></app-form-usuarios-admin>
   </ng-container>
 
